--- a/client/src/res/css/tags.css
+++ b/client/src/res/css/tags.css
@@ -56,7 +56,8 @@ ul {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   grid-auto-flow: row;
-  grid-gap: 10px;
+  grid-gap: 1em;
+  gap: 10px;
   place-items: stretch;
   max-width: 1100px;
   margin: 1.5rem;
@@ -81,7 +82,7 @@ ul {
   height: 48px;
   background: #b2b2b2;
   color: #ffffff;
-  border-radius: 5px;
+  border-radius: 25px;
   font-size: 1rem;
 }
 
@@ -94,10 +95,10 @@ ul {
 .nextButton {
   position: center;
   display: flex;
-  width: 20%;
+  width: 30vh;
   margin: 1em;
   margin-left: auto;
-  margin-right: 150px;
+  margin-right: 7vh;
   background-color: #0f4beb;
   border-radius: 50px;
   justify-content: center;
